[package]
name = "dev-score"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
borsh = "0.10.3"
borsh-derive = "0.10.3"
solana-sdk = "2.2.1"
base64 = "0.21"
dotenvy = "0.15"
log = "0.4"
pretty_env_logger = "0.5"
yellowstone-grpc-client = { version = "6.0.0" }
yellowstone-grpc-proto = { version = "6.0.0" }
futures-util = "0.3"
tokio-stream = "0.1"
tonic = "0.10"
